Improve timeline popup by preventing rest of page from shifting down

--- a/src/app/stylesheets/main.sass
+++ b/src/app/stylesheets/main.sass
@@ -87,6 +87,10 @@ nav
 .timeline
   padding: 20px
 
+#content
+  z-index: 1000
+  position: absolute
+
 .column-state-badge
   margin-left: 5px
 
